<resources>
    <string name="app_name">FormularioAndroid</string>
    <string name="txt_nombre">nombre</string>
    <string name="txt_apellidos">Apellidos</string>
    <string name="txt_coment">Comentario</string>
    <string name="txt_correo">Correo</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="CB_sub">Suscribirse por e-mail</string>
</resources>